# monorepo-of-madness

./: .gitignore  README.md
.github/workflows/: ci.yml  code-relevance-checker.lock.yml  code-relevance-checker.md  repo-activity-report.lock.yml  repo-activity-report.md
2025-06-28-agent_driven_infrastructure/infra_agent/: Containerfile  README.md  event_file.txt  pyproject.toml
2025-06-28-agent_driven_infrastructure/infra_agent/src/infra_agent/: main.py
2025-06-28-agent_driven_infrastructure/kubernetes/: infra-agent-deployment.yaml  user-api-deployment.yaml  user-api-service.yaml
2025-06-28-agent_driven_infrastructure/user_api/: Containerfile  README.md  main.py  pyproject.toml  setup.sh
2025-07-02-agent_data_pipelines/data_pipeline_agent/: README.md  pyproject.toml
2025-07-02-agent_data_pipelines/data_pipeline_agent/src/data_pipeline_agent/: agent.py
2025-07-02-agent_data_pipelines/data_pipeline_agent/src/data_pipeline_agent/tools/: cleanup_tmp.py  fetch_pdfs.py  pdf_to_csv.py  pdf_to_csv_no_llm.py  to_json.py  to_json_no_llm.py  transpose.py  transpose_no_llm.py
2025-07-02-agent_data_pipelines/data_pipeline_agent/src/data_pipeline_agent/utils/: geo_utils.py  retry.py
2025-07-02-agent_data_pipelines/uk_map/: package.json
2025-07-02-agent_data_pipelines/uk_map/src/: app.html
2025-07-02-agent_data_pipelines/uk_map/src/data/: sighting_geos.json
2025-07-02-agent_data_pipelines/uk_map/src/lib/: UfoMap.svelte  UfoMapClientOnly.svelte
2025-07-02-agent_data_pipelines/uk_map/src/routes/: +page.svelte
2025-07-10-mcp_orchestra/: start_all.sh  stop_all.sh
2025-07-10-mcp_orchestra/orchestra_instruments/: pyproject.toml
2025-07-10-mcp_orchestra/orchestra_instruments/src/llm_api/: main.py
2025-07-10-mcp_orchestra/orchestra_instruments/src/orchestra_instruments/: api.py
2025-07-10-mcp_orchestra/orchestra_instruments/src/orchestra_instruments/instruments/: brass.py  cellos.py  piano.py  violin.py  violins.py  woodwind.py
2025-07-10-mcp_orchestra/orchestra_ui/: package.json
2025-07-10-mcp_orchestra/orchestra_ui/src/: app.html
2025-08-06-vscode-copilot-tool/: package.json
2025-08-06-vscode-copilot-tool/src/: extension.ts  recipeSearch.ts
2025-08-06-vscode_copilot_tool/: recipe-copilot-tool-1.0.0.vsix  tsconfig.json
2025-08-06-vscode_copilot_tool/src/: extension.ts
2025-08-21-textual_ai_dungeon/: .env.example  README.md  pyproject.toml  setup.sh  test_game.py  test_ui.py  test_ui_structure.py
2025-08-21-textual_ai_dungeon/src/ai_dungeon/: __init__.py  main.py
2025-08-21-textual_ai_dungeon/src/ai_dungeon/ai/: gemini_engine.py
2025-08-21-textual_ai_dungeon/src/ai_dungeon/core/: engine.py  models.py  utils.py
2025-08-21-textual_ai_dungeon/src/ai_dungeon/player/: inventory.py  player.py
2025-08-21-textual_ai_dungeon/src/ai_dungeon/ui/: app.py  game_screen.py  start_screen.py  utils.py
2025-08-21-textual_ai_dungeon/src/ai_dungeon/world/: world.py
2025-09-22-rag_word_puzzle/postgres/: .env.example  README.md  docker-compose.yml  manage.sh
2025-09-22-rag_word_puzzle/postgres/init/: 01-init-rag-schema.sql
2025-09-22-rag_word_puzzle/rag_magic/: README.md  pyproject.toml
2025-09-22-rag_word_puzzle/rag_magic/src/rag_magic/: __init__.py  config.py  database.py  embeddings.py  main.py
2025-09-22-rag_word_puzzle/word_puzzles/: puzzle1_well.txt  puzzle2_done.txt  puzzle3_you.txt  puzzle4_found.txt  puzzle5_me.txt
2025-09-30-agentic_dungeon_escape/dungeon_app/: pyproject.toml
2025-09-30-agentic_dungeon_escape/dungeon_app/src/dungeon_app/: game_screen.py  main.py
2025-09-30-agentic_dungeon_escape/dungeon_app/src/dungeon_app/rooms/: __init__.py  base_room.py  enemy.py  merchant.py  road.py  wizard.py
2025-11-01-scottish_landmarks/backend/: README.md  pyproject.toml
2025-11-01-scottish_landmarks/backend/src/scottish_landmarks/: __init__.py  agent.py  config.py  main.py  schemas.py  tools.py  utils.py
2025-11-01-scottish_landmarks/backend/src/scottish_landmarks/routers/: __init__.py  travel.py  websocket.py
2025-11-01-scottish_landmarks/ui/: README.md  package.json
2025-11-01-scottish_landmarks/ui/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
2025-11-01-scottish_landmarks/ui/src/: app.css
2025-11-21-guardrails_of_fitness/: README.md  start.sh  stop.sh
2025-11-21-guardrails_of_fitness/backend/: .env.example  pyproject.toml
2025-11-21-guardrails_of_fitness/backend/src/fitness_analysis/: __init__.py  agent_enhanced.py  data_loader.py  main.py  tools.py
2025-11-21-guardrails_of_fitness/frontend/: package.json
2025-11-21-guardrails_of_fitness/frontend/src/: app.html
2026-02-24-github_agentic_workflows/: ACTION_PLAN.md  startup.sh
2026-02-24-github_agentic_workflows/backend/: pyproject.toml
2026-02-24-github_agentic_workflows/backend/src/: main.py
2026-02-24-github_agentic_workflows/backend/tests/: test_main.py
2026-02-24-github_agentic_workflows/frontend/: package.json  vite.config.ts
2026-02-24-github_agentic_workflows/frontend/.svelte-kit/: ambient.d.ts
2026-04-23-performance_comparison/benchmark/: compare.py  run.sh
2026-04-23-performance_comparison/benchmark/results/: .gitkeep  python_results.jsonl  python_results_claude-sonnet-4.6.jsonl  python_results_gemini-3.1-pro-preview.jsonl  python_results_gpt-5.4.jsonl  python_results_nemotron-3-super-120b-a12b.jsonl  report.html  rust_results.jsonl  rust_results_claude-sonnet-4.6.jsonl  rust_results_gemini-3.1-pro-preview.jsonl  rust_results_gpt-5.4.jsonl
2026-04-23-performance_comparison/python_agent/: pyproject.toml
2026-04-23-performance_comparison/python_agent/src/python_agent/: agent.py  benchmark.py  eval.py  tools.py
2026-04-23-performance_comparison/rust_agent/: Cargo.toml
2026-04-23-performance_comparison/rust_agent/src/: main.rs  main.rs.backup
2026-04-23-performance_comparison/rust_agent/src/config/: args.rs
2026-04-23-performance_comparison/rust_agent/src/eval/: mod.rs  photosynthesis_evaluator.rs
2026-04-23-performance_comparison/rust_agent/src/tools/: mod.rs  photosynthesis_data_collector.rs  search_knowledge_base.rs
(+14 files in other folders)
