[project]
name = "ai-dungeon"
version = "0.1.0"
description = "An immersive text-based adventure game powered by LangGraph and Google Gemini AI for dynamic world generation and intelligent dialogue"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.40.0",
    "langgraph>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.8.0"
]

[project.scripts]
start-dungeon-game = "ai_dungeon.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
