[project]
name = "orchestra-instruments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "numpy>=2.3.1",
    "pydantic>=2.11.7",
    "pydub>=0.25.1",
    "pyfluidsynth>=1.3.4",
    "scipy>=1.16.0",
    "sounddevice>=0.5.2",
    "uvicorn>=0.35.0",
]
