[project]
name = "orchestra-instruments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "langchain-google-genai>=2.1.7",
    "numpy>=2.3.1",
    "pydantic>=2.11.7",
    "pydub>=0.25.1",
    "pyfluidsynth>=1.3.4",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "uvicorn>=0.35.0",
]

[project.scripts]
mcp_server = "orchestra_instruments.api:app"
llm_api = "llm_api.main:app"
