[project]
name = "python-agent"
version = "0.1.0"
description = "LangGraph ReAct agent for performance benchmarking"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "requests>=2.32",
]

[project.scripts]
benchmark = "python_agent.benchmark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_agent"]
