[package]
name = "rust-agent"
version = "0.1.0"
edition = "2021"
description = "rig ReAct agent for performance benchmarking"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[dependencies]
rig-core = "0.35"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.13", features = ["json"] }
urlencoding = "2"
